--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 欢迎来到墨鱼🦑的个人博客
+title: 墨鱼🦑的个人博客
 subtitle: ''
 description: ''
 keywords:
